Clean up codebase toward credential revocation
Signed-off-by: Ingrid Kamga <xingridkamga@gmail.com>